Fix navbar covering header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,8 +20,8 @@ header {
 
     // Big Screen
     @media only screen and (min-width: 600px) {
-        padding-left: .5rem;
-        padding-right: .5rem;
+        padding-left: calc(var(--navbar-width-large) * 2);
+        padding-right: var(--navbar-width-large);
         text-align: center;
     }
 }
